--- a/my-computer/index.html
+++ b/my-computer/index.html
@@ -44,7 +44,7 @@
   <details>
     <summary><h2>System apps</h2></summary>
     <ul>
-    <span>(theses apps are for MacOS but I think you can find an alternative on alternative.net)</span><br><br>
+    <span>(theses apps are for MacOS but I think you can find <a href="https://alternativeto.net/">alternatives</a>)</span><br><br>
 
     <li>
       KeepassXC <span>· password collector</span>
