--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="menu">
     <form name="form" class="enter">
       <input id="button" name="submit" style="display:none" />
-      <input class="identity" id="meCircle" type='text' name='texte' value='⊙.☉' onkeypress="clickPress(event)" />
+      <input class="identity" id="meCircle" type='text' name='texte' value='⚡️' onkeypress="clickPress(event)" />
     </form>
     <span id="timer">⚡️</span>
   </div>
@@ -64,7 +64,7 @@
       <div class="card">
         <div class="card-text">
           <p>
-            I'm Pablo Moreno, a energetic web designer, studying in France and working down to Bilbao.
+            I'm Pablo Moreno, an energetic web designer, studying in France and working down to Bilbao.
           </p>
           <img src="assets/me.jpg" style="width: 100px; height: 100px;"
             alt="Picture of Pablo Moreno smiling, in his room in Bilbao, Spain" id="app"></img>
