--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
   <div class="menu">
     <form name="form" class="enter">
       <input id="button" name="submit" style="display:none" />
-      <input class="identity" id="meCircle" type='text' name='texte' value='⚡️' onkeypress="clickPress(event)" />
+      <input class="identity" id="meCircle" type='text' name='texte' value='' onkeypress="clickPress(event)" />
     </form>
-    <span id="timer">⚡️</span>
+    <span id="timer">⚡️⚡️⚡️</span>
   </div>
 
 
-  <div class="screen-home nonight">
+  <div class="front nonight">
 
     <div class="year-selector">
       Website version:
@@ -80,7 +80,24 @@
 
 
 
-  <div class="nonight grid" id="second"> </div>
+  <div class="nonight back">
+    <div class="now">
+      <p>I'm a France living spanish boy, who loves create, early mornings and movies. Finishing my graphic design
+        studies, I'm in my second year of the double Master in UX/UI, between to the <a
+          href="https://esad-amiens.design/fr/design-numerique/dnsep">ESAD</a> of Amiens and the <a
+          href="https://www.utc.fr/en/courses-and-training/the-french-masters-degree/humanities-and-creative-industries-hic/specialty-design-and-experience-creation-dcx/">UTC</a>
+        of
+        Compiègne.</p>
+
+      <p>Lately I'm putting a lot of motivation making websites for people, for things or for fun... here are some of them ⇣ <br> I have a lot of
+        ideas that I'm working on! <a href="mailto:pablomoreno@proton.me">Tell me</a> if you are interested on making
+        yours!</p>
+
+      <p>See ya!</p>
+      <p>pablo ⚡️</p>
+    </div>
+    <div class="grid"></div>
+  </div>
 
 
   <audio id="sound" src="assets/sound.mp3" preload="auto"></audio>
