--- a/pad/index.html
+++ b/pad/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <iframe src="https://etherpad.wikimedia.org/p/Pablo_23"></iframe>
+    <iframe src="https://etherpad.wikimedia.org/p/saposabio"></iframe>
 </body>
 
 </html>
