--- a/pad/index.html
+++ b/pad/index.html
@@ -8,21 +8,15 @@
 
     <style>
         body {
-            margin: 0;
-            overflow: hidden;
-        }
-
-        iframe {
-            height: 100%;
-            width: 100%;
-            position: absolute;
-            border: 0;
+            background-color: aqua;
         }
     </style>
 </head>
 
 <body>
-    <iframe src="https://etherpad.wikimedia.org/p/saposabio"></iframe>
+    <script>
+        window.location = "https://etherpad.wikimedia.org/p/saposabio";
+    </script>
 </body>
 
 </html>
