--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
   <link type="text/css" rel="stylesheet" href="assets/fonts/fonts.css" />
   <link type="text/css" rel="stylesheet" href="assets/css/style.css" />
   <link type="text/css" rel="stylesheet" href="assets/css/mobile.css" />
-  <link type="text/css" rel="stylesheet" href="assets/css/addons.css" />
   <link type="text/css" rel="stylesheet" href="web-archive/assets/web-archive.css" />
 
   <link rel="preload" href="/assets/fonts/Rubik/rubik-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
@@ -96,7 +95,13 @@
       <p>See ya!</p>
       <p>pablo ⚡️</p>
     </div>
-    <div class="grid"></div>
+
+    <details>
+      <summary>Test</summary>
+      <div class="grid"></div>
+    </details>
+ 
+
   </div>
 
 
