--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 
     <details>
-      <summary>Test</summary>
+      <summary>Websites</summary>
       <div class="grid"></div>
     </details>
  
