--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
         of
         Compiègne.</p>
 
-      <p>Lately I'm putting a lot of motivation making websites for people, for things or for fun... here are some of them ⇣ <br> I have a lot of
-        ideas that I'm working on! <a href="mailto:pablomoreno@proton.me">Tell me</a> if you are interested on making
-        yours!</p>
+      <p>Lately I'm putting a lot of motivation making websites for people, for things or for fun... here are some of
+        them ⇣ <br> I have a lot of
+        ideas that I'm working on! <a href="mailto:pablomoreno@proton.me">Tell me</a> if you want to make one together!
+      </p>
 
       <p>See ya!</p>
       <p>pablo ⚡️</p>
@@ -100,7 +101,29 @@
       <summary>Websites</summary>
       <div class="grid"></div>
     </details>
- 
+
+    <details>
+      <summary>+ stuff</summary>
+      <div class="grid">
+        <a class="project" href=""><img src="assets/thumbnails/3d/anthropocene.png"></a>
+        <a class="project" href=""><img src="assets/thumbnails/3d/tribut-cafe.png"></a>
+
+        <a class="project" href=""><img src="assets/thumbnails/3d/jpo-julie.png"></a>
+        <div class="project secret"><img src="assets/thumbnails/stuff/t_cimetiere-graville.jpg"></div>
+        <div class="project secret"><img src="assets/thumbnails/stuff/t_dissuation-nucleaire.png"></div>
+        <div class="project"><img src="assets/thumbnails/stuff/t_tramway.jpg"></div>
+        <div class="project"><img src="assets/thumbnails/stuff/t_souvenirs-abrupts.jpg"></div>
+        <div class="project"><img src="assets/thumbnails/stuff/t_ketamina.png"></div>
+        
+        <div class="project secret"><img src="assets/thumbnails/stuff/t_edition-jardin.jpg"></div>
+        <div class="project secret"><img src="assets/thumbnails/stuff/t_esadhar-books.jpg"></div>
+        <div class="project secret"><img src="assets/thumbnails/stuff/t_festival-ombre.jpg"></div>
+        <div class="project"><img src="assets/thumbnails/stuff/t_glace-sans-tain.webp"></div>
+        <div class="project"><img src="assets/thumbnails/stuff/t_more-things.webp"></div>
+        <div class="project secret"><img src="assets/thumbnails/stuff/t_doom-day.jpg"></div>
+      </div>
+    </details>
+
 
   </div>
 
@@ -113,11 +136,11 @@
 
   <script id="script" src="assets/js/data.js"></script>
   <script id="script" src="assets/js/import.js"></script>
+  <script id="script" src="assets/js/thisColor.js"></script>
   <script id="script" src="assets/js/mobile-height.js"></script>
   <script id="script" src="assets/js/script.js"></script>
   <script id="script" src="web-archive/assets/web-archive.js"></script>
 
-  <!-- <script id="script" src="assets/js/thisColor.js"></script> -->
 
 </body>
 
