--- a/briançon/index.html
+++ b/briançon/index.html
@@ -35,8 +35,8 @@
             border-radius: 20px;
             height: 100%;
             width: 100%;
-            object-fit: cover;
-            background-color: green;
+            object-fit: contain;
+            background-color: navajowhite;
         }
     </style>
 </head>
