--- a/briançon/index.html
+++ b/briançon/index.html
@@ -38,6 +38,12 @@
             object-fit: contain;
             background-color: navajowhite;
         }
+
+        @media screen and (max-width: 600px) {
+            video {
+                object-fit: cover;
+            }
+        }
     </style>
 </head>
 
