--- a/index.html
+++ b/index.html
@@ -79,28 +79,34 @@
 
 
 
-  <div class="nonight back">
+  <div class="back nonight">
     <div class="now">
-      <p>I'm a France living spanish boy, who loves create, early mornings and movies. Finishing my graphic design
-        studies, I'm in my second year of the double Master in UX/UI, between to the <a
-          href="https://esad-amiens.design/fr/design-numerique/dnsep">ESAD</a> of Amiens and the <a
-          href="https://www.utc.fr/en/courses-and-training/the-french-masters-degree/humanities-and-creative-industries-hic/specialty-design-and-experience-creation-dcx/">UTC</a>
-        of
-        Compiègne.</p>
+      <p>I'm a young spanish student, who loves create, early mornings and movies. Finishing my graphic design
+        studies, I'm putting a lot of energy on making websites for people, for things or for fun.</p>
 
-      <p>Lately I'm putting a lot of motivation making websites for people, for things or for fun... here are some of
-        them ⇣ <br> I have a lot of
-        ideas that I'm working on! <a href="mailto:pablomoreno@proton.me">Tell me</a> if you want to make one together!
-      </p>
+      <h5>Daily life</h5>
+      <ul>
+        <li>Second and final year of the Double Master in UI/UX, between the <a
+            href="https://esad-amiens.design/fr/design-numerique/dnsep">ESAD</a> of Amiens andand the <a
+            href="https://www.utc.fr/en/courses-and-training/the-french-masters-degree/humanities-and-creative-industries-hic/specialty-design-and-experience-creation-dcx/">UTC</a>.
+        </li>
+        <li>Working as a "vacataire" at the Maison de la Culture in Amiens.</li>
+        <li>Thinking about my master project, a tool to share knowledge inside my school. <a href="">[Figma link]</a></li>
+        <li>Making a website for the jewekry-maker, Angèle Carion</li>
+      </ul>
 
-      <p>See ya!</p>
+      <h5>Connexions</h5>
+      <ul>
+        <li><a href="https://read.cv/pablomoreno">CV</a></li>
+        <li><a href="https://www.are.na/pablo-moreno">Are.na</a></li>
+        <li><a href="mailto:pablomoreno@proton.me">Email</a></li>
+      </ul>
+
       <p>pablo ⚡️</p>
     </div>
 
-    <details>
-      <summary>Websites</summary>
-      <div class="grid"></div>
-    </details>
+      <div class="grid">
+      </div>
 
     <!-- <details>
       <summary>+ stuff</summary>
