--- a/cartography/index.html
+++ b/cartography/index.html
@@ -7,47 +7,96 @@
   <title>CARTOGRAPHY</title>
 
   <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="stylesheet" href="./assets/css/normalize.css">
-  <link rel="stylesheet" href="./assets/fonts/inter/inter.css">
 </head>
 
 <body>
-
-  <div id='viewport' class='dragscroll nochilddrag'>
-    <div id='carto'>
-      <div class="startLoading tagButton noHover"><span id="tagToLoad"></span><img src="./assets/img/spinner.gif"></div>
-      <div class="tagStart"></div>
-      <div class="tagList"></div>
+  <div class="welcoming">
+    <div>
+      <h1>CARTOGRAPHIE</h1>
+      <p>L'excercise de la cartographie consiste à faire une collection d'objets en lien avec notre mémoire et diplôme
+        de DNSEP. Tout autant important que ce rassemblement est la façon dont on le présente. Son organisation et
+        navigation est assez personnelle, puisque elle doit guider le public à travers cette collection qui est celle
+        que l'on a réuni au long de plusieurs mois.</p>
+      <button id="welcome">Commencez !</button>
     </div>
   </div>
 
-
-
   <div class="history">
     <div class="header">
-      <h5>History</h5>
-      <span>▴</span>
+    <h5>Historique <img src="assets/img/history.png"></h5>
+      <div id="buttonEmail" class="hoverShadow "><img src="assets/img/mail.png" ></div>
     </div>
     <div class="historyContent"></div>
   </div>
 
-  <div class="menu">
-    <div class="infos">
-      <div id="about" class="tagButton">A</div>
-      <div id="index" class="tagButton">index</div>
-    </div>
-    <div>
-      <div id="restart" class="round shadow">♻️</div>
-      <div id="random" class="round shadow">🎲</div>
-      <div id="lesszoom" class="round shadow">−</div>
-      <div id="morezoom" class="round shadow">+</div>
+  <div id='viewport' class='dragscroll nochilddrag'>
+    <div id='carto'>
+      <div class="startLoading tagButton noHover"><span id="tagToLoad"></span><img src="./assets/img/spinner.gif"></div>
+      <div class="tagList">
+        <p>Voici les tags qui décrivent les sites web de cette collection. À l'heure acutelle il y en a <b>188</b>.<br>
+          Sélectionne un pour découvrir le premier site web.</p>
+      </div>
+      <div class="tagMore">
+      </div>
     </div>
   </div>
+
+  <div class="about">
+    <p>Comme vous l'avez déjà remarqué, puisque vous lisez ce texte à l'écran, la forme de ma cartographie est
+      numérique, et ce site/outil vous permettra de la parcourir. Et de quoi est composé cette collection? De sites webs
+      qui me plaisaient (tant sa forme que son fond) et d'autres que j'ai pu découvrir à travers des hyperliens et de
+      l'outil communautaire <a href="are.na">are.na</a>.</p>
+    <p>Pour finir je tiendrais à remercier Patrick Doan de nous avoir proposé cet exercice que je trouve très
+      intéressant et à Olivier Cornet d'avoir codé avec moi les engrenages du site que vous allez bientôt utiliser.
+  </div>
+
+  <div class="menu">
+    <div id="buttonAbout" class="hoverShadow ">
+      <img src="assets/img/about.png">
+      <span>À propos</span>
+    </div>
+    <div id="buttonIndex" class="hoverShadow ">
+      <img src="assets/img/index.png">
+      <span>Index</span>
+    </div>
+    <div id="buttonHistory" class="hoverShadow checked">
+      <img src="assets/img/history.png">
+      <span>Historique</span>
+    </div>
+    <div id="buttonRestart" class="hoverShadow ">
+      <img src="assets/img/restart.png">
+      <span>Relancer</span>
+    </div>
+    <div id="buttonRandom" class="hoverShadow ">
+      <img src="assets/img/random.png">
+      <span>Aléatoire</span>
+    </div>
+    <div id="buttonOptions" class="hoverShadow ">
+      <img src="assets/img/options.png">
+      <span>Options</span>
+    </div>
+  </div>
+
+  <audio id="soundhover" src="assets/sound/soundhover.mp3" preload="auto"></audio>
+  <!-- 
+  <div class="zoom">
+    <div id="lesszoom" class="hoverShadow">−</div>
+    <div id="morezoom" class="hoverShadow">+</div>
+  </div> -->
+
+  <div class="zoom">
+    <input type="range" min="20" max="100" value="100" name="zoom" id="bookzoom">
+  </div>
+
+
+  <div class="background"></div>
+
 
 
   <script src='./assets/js/data.js'></script>
   <script src='./assets/js/script.js'></script>
-  <!-- <script src='./assets/js/dragscroll.js'></script> -->
+  <script src='./assets/js/addons.js'></script>
+  <script src='./assets/js/dragscroll.js'></script>
 </body>
 
 </html>
