--- a/index.html
+++ b/index.html
@@ -81,18 +81,17 @@
 
   <div class="back nonight">
     <div class="now">
-      <p>I'm a young spanish student, who loves create, early mornings and movies. Finishing my graphic design
-        studies, I'm putting a lot of energy on making websites for people, for things or for fun.</p>
+      <p>I'm a young spanish and french student, who loves create, early mornings and movies. Finishing my graphic design studies. Lately, I'm putting a lot of energy on making websites for people, for things or for fun.</p>
 
       <h5>Daily life</h5>
       <ul>
-        <li>Second and final year of the Double Master in UI/UX, between the <a
+        <li>Studying my final year of the Double Master in UI/UX, between the <a
             href="https://esad-amiens.design/fr/design-numerique/dnsep">ESAD</a> of Amiens andand the <a
             href="https://www.utc.fr/en/courses-and-training/the-french-masters-degree/humanities-and-creative-industries-hic/specialty-design-and-experience-creation-dcx/">UTC</a>.
         </li>
-        <li>Working as a "vacataire" at the Maison de la Culture in Amiens.</li>
-        <li>Thinking about my master project, a tool to share knowledge inside my school. <a href="">[Figma link]</a></li>
-        <li>Making a website for the jewekry-maker, Angèle Carion</li>
+        <li>Preparing my master project, differents tools to share knowledge (calendar, map, documentation, books) inside my school.</li>
+        <li>Working at the <i>Maison de la Culture</i> of Amiens. I welcome people at the spectacles and sell the movies tickets.</li>
+        <li>Making a website for the jewelry-maker, Angèle Carion.</li>
       </ul>
 
       <h5>Connexions</h5>
@@ -101,8 +100,6 @@
         <li><a href="https://www.are.na/pablo-moreno">Are.na</a></li>
         <li><a href="mailto:pablomoreno@proton.me">Email</a></li>
       </ul>
-
-      <p>pablo ⚡️</p>
     </div>
 
       <div class="grid">
