--- a/cartography/index.html
+++ b/cartography/index.html
@@ -21,12 +21,24 @@
     </div>
   </div>
 
-  <div class="history">
-    <div class="header">
-    <h5>Historique <img src="assets/img/history.png"></h5>
-      <div id="buttonEmail" class="hoverShadow "><img src="assets/img/mail.png" ></div>
+  <div class="side">
+
+    <div class="history hidden">
+      <div class="header">
+        <h5>Historique</h5>
+        <div id="buttonEmail" class="hoverShadow "><img src="assets/img/mail.png"></div>
+      </div>
+      <div class="historyContent"></div>
     </div>
-    <div class="historyContent"></div>
+
+    <div class="index hidden">
+      <div class="header">
+        <h5>Index</h5>
+        <div id="buttonEmail" class="hoverShadow "><img src="assets/img/mail.png"></div>
+        </div>
+        <div class="indexContent"></div>
+    </div>
+
   </div>
 
   <div id='viewport' class='dragscroll nochilddrag'>
@@ -55,11 +67,11 @@
       <img src="assets/img/about.png">
       <span>À propos</span>
     </div>
-    <div id="buttonIndex" class="hoverShadow ">
+    <div id="buttonIndex" class="hoverShadow">
       <img src="assets/img/index.png">
       <span>Index</span>
     </div>
-    <div id="buttonHistory" class="hoverShadow checked">
+    <div id="buttonHistory" class="hoverShadow">
       <img src="assets/img/history.png">
       <span>Historique</span>
     </div>
