--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <input id="button" name="submit" style="display:none" />
       <input class="identity" id="meCircle" type='text' name='texte' value='' onkeypress="clickPress(event)" />
     </form>
-    <span id="timer">⚡️⚡️⚡️</span>
+    <span id="whatNew">⚡️⚡️⚡️</span>
   </div>
 
 
@@ -80,7 +80,7 @@
 
 
   <div class="back nonight">
-    <div class="now">
+    <!-- <div class="now">
       <p>I'm a young spanish and french student, who loves create, early mornings and movies. Finishing my graphic design studies. Lately, I'm putting a lot of energy on making websites for people, for things or for fun.</p>
 
       <h5>Daily life</h5>
@@ -91,7 +91,6 @@
         </li>
         <li>Preparing my master project, differents tools to share knowledge (calendar, map, documentation, books) inside my school.</li>
         <li>Working at the <i>Maison de la Culture</i> of Amiens. I welcome people at the spectacles and sell the movies tickets.</li>
-        <li>Making a website for the jewelry-maker, Angèle Carion.</li>
       </ul>
 
       <h5>Connexions</h5>
@@ -100,10 +99,52 @@
         <li><a href="https://www.are.na/pablo-moreno">Are.na</a></li>
         <li><a href="mailto:pablomoreno@proton.me">Email</a></li>
       </ul>
-    </div>
+    </div> -->
 
-      <div class="grid">
+    <div class="grid">
+      <div class="blockTitle">
       </div>
+
+      <div class="block about text">
+        <p>I'm a young spanish and french student, who loves create, early mornings and movies. Finishing my graphic
+          design studies. Lately, I'm putting a lot of energy on making websites for people, for things or for fun.</p>
+      </div>
+
+      <div class="blockTitle dailyLife">
+        <h2 class="">Daily life ➔</h2>
+      </div>
+
+      <div class="block dailyLife text">
+        <p>Studying my final year of the Double Master in UI/UX, between the <a
+            href="https://esad-amiens.design/fr/design-numerique/dnsep">ESAD</a> of Amiens andand the <a
+            href="https://www.utc.fr/en/courses-and-training/the-french-masters-degree/humanities-and-creative-industries-hic/specialty-design-and-experience-creation-dcx/">UTC</a>
+        </p>
+      </div>
+
+      <div class="block dailyLife text">
+        <li>Preparing my master project, differents tools to share knowledge (calendar, map, documentation, books)
+          inside my school.</li>
+      </div>
+
+      <div class="block dailyLife text">
+        <li>Working at the <i>Maison de la Culture</i> of Amiens. I welcome people at the spectacles and sell the movies
+          tickets.</li>
+      </div>
+
+      <div class="block dailyLife text">
+        <li>Making a website for the jewelry-maker, Angèle Carion.</li>
+      </div>
+      <div class="blockTitle connexions">
+        <h2 class="">Connexions ➔</h2>
+      </div>
+      <div class="block connexions text">
+        <ul>
+          <li><a href="https://read.cv/pablomoreno">CV</a></li>
+          <li><a href="https://www.are.na/pablo-moreno">Are.na</a></li>
+          <li><a href="mailto:pablomoreno@proton.me">Email</a></li>
+        </ul>
+      </div>
+    </div>
 
     <!-- <details>
       <summary>+ stuff</summary>
