--- a/cartography/index.html
+++ b/cartography/index.html
@@ -26,7 +26,7 @@
     <div class="history hidden">
       <div class="header">
         <h5>Historique</h5>
-        <div id="buttonEmail" class="hoverShadow "><img src="assets/img/mail.png"></div>
+        <div id="buttonEmail" class="hoverShadow "><img src="assets/img/history.png"></div>
       </div>
       <div class="historyContent"></div>
     </div>
@@ -34,9 +34,23 @@
     <div class="index hidden">
       <div class="header">
         <h5>Index</h5>
-        <div id="buttonEmail" class="hoverShadow "><img src="assets/img/mail.png"></div>
-        </div>
-        <div class="indexContent"></div>
+        <div id="buttonEmail" class="hoverShadow "><img src="assets/img/index.png"></div>
+      </div>
+      <div class="indexContent"></div>
+    </div>
+
+    <div class="about hidden">
+      <div class="header">
+        <h5>Index</h5>
+        <div id="buttonEmail" class="hoverShadow "><img src="assets/img/about.png"></div>
+      </div>
+      <p>Comme vous l'avez déjà remarqué, puisque vous lisez ce texte à l'écran, la forme de ma cartographie est
+        numérique, et ce site/outil vous permettra de la parcourir. Et de quoi est composé cette collection? De sites
+        webs
+        qui me plaisaient (tant sa forme que son fond) et d'autres que j'ai pu découvrir à travers des hyperliens et de
+        l'outil communautaire <a href="are.na">are.na</a>.</p>
+      <p>Pour finir je tiendrais à remercier Patrick Doan de nous avoir proposé cet exercice que je trouve très
+        intéressant et à Olivier Cornet d'avoir codé avec moi les engrenages du site que vous allez bientôt utiliser.
     </div>
 
   </div>
@@ -53,14 +67,7 @@
     </div>
   </div>
 
-  <div class="about">
-    <p>Comme vous l'avez déjà remarqué, puisque vous lisez ce texte à l'écran, la forme de ma cartographie est
-      numérique, et ce site/outil vous permettra de la parcourir. Et de quoi est composé cette collection? De sites webs
-      qui me plaisaient (tant sa forme que son fond) et d'autres que j'ai pu découvrir à travers des hyperliens et de
-      l'outil communautaire <a href="are.na">are.na</a>.</p>
-    <p>Pour finir je tiendrais à remercier Patrick Doan de nous avoir proposé cet exercice que je trouve très
-      intéressant et à Olivier Cornet d'avoir codé avec moi les engrenages du site que vous allez bientôt utiliser.
-  </div>
+
 
   <div class="menu">
     <div id="buttonAbout" class="hoverShadow ">
@@ -102,7 +109,7 @@
 
 
   <div class="background"></div>
-
+<div class="blackScreen hidden"></div>
 
 
   <script src='./assets/js/data.js'></script>
