--- a/index.html
+++ b/index.html
@@ -80,28 +80,8 @@
 
 
   <div class="back nonight">
-    <!-- <div class="now">
-      <p>I'm a young spanish and french student, who loves create, early mornings and movies. Finishing my graphic design studies. Lately, I'm putting a lot of energy on making websites for people, for things or for fun.</p>
-
-      <h5>Daily life</h5>
-      <ul>
-        <li>Studying my final year of the Double Master in UI/UX, between the <a
-            href="https://esad-amiens.design/fr/design-numerique/dnsep">ESAD</a> of Amiens andand the <a
-            href="https://www.utc.fr/en/courses-and-training/the-french-masters-degree/humanities-and-creative-industries-hic/specialty-design-and-experience-creation-dcx/">UTC</a>.
-        </li>
-        <li>Preparing my master project, differents tools to share knowledge (calendar, map, documentation, books) inside my school.</li>
-        <li>Working at the <i>Maison de la Culture</i> of Amiens. I welcome people at the spectacles and sell the movies tickets.</li>
-      </ul>
-
-      <h5>Connexions</h5>
-      <ul>
-        <li><a href="https://read.cv/pablomoreno">CV</a></li>
-        <li><a href="https://www.are.na/pablo-moreno">Are.na</a></li>
-        <li><a href="mailto:pablomoreno@proton.me">Email</a></li>
-      </ul>
-    </div> -->
-
     <div class="grid">
+
       <div class="blockTitle">
       </div>
 
@@ -145,30 +125,6 @@
         </ul>
       </div>
     </div>
-
-    <!-- <details>
-      <summary>+ stuff</summary>
-      <div class="grid">
-        <a class="project" href=""><img src="assets/thumbnails/3d/anthropocene.png"></a>
-        <a class="project" href=""><img src="assets/thumbnails/3d/tribut-cafe.png"></a>
-
-        <a class="project" href=""><img src="assets/thumbnails/3d/jpo-julie.png"></a>
-        <div class="project secret"><img src="assets/thumbnails/stuff/t_cimetiere-graville.jpg"></div>
-        <div class="project secret"><img src="assets/thumbnails/stuff/t_dissuation-nucleaire.png"></div>
-        <div class="project"><img src="assets/thumbnails/stuff/t_tramway.jpg"></div>
-        <div class="project"><img src="assets/thumbnails/stuff/t_souvenirs-abrupts.jpg"></div>
-        <div class="project"><img src="assets/thumbnails/stuff/t_ketamina.png"></div>
-        
-        <div class="project secret"><img src="assets/thumbnails/stuff/t_edition-jardin.jpg"></div>
-        <div class="project secret"><img src="assets/thumbnails/stuff/t_esadhar-books.jpg"></div>
-        <div class="project secret"><img src="assets/thumbnails/stuff/t_festival-ombre.jpg"></div>
-        <div class="project"><img src="assets/thumbnails/stuff/t_glace-sans-tain.webp"></div>
-        <div class="project"><img src="assets/thumbnails/stuff/t_more-things.webp"></div>
-        <div class="project secret"><img src="assets/thumbnails/stuff/t_doom-day.jpg"></div>
-      </div>
-    </details> -->
-
-
   </div>
 
 
@@ -180,7 +136,7 @@
 
   <script id="script" src="assets/js/data.js"></script>
   <script id="script" src="assets/js/import.js"></script>
-  <script id="script" src="assets/js/thisColor.js"></script>
+  <!-- <script id="script" src="assets/js/thisColor.js"></script> -->
   <script id="script" src="assets/js/mobile-height.js"></script>
   <script id="script" src="assets/js/script.js"></script>
   <script id="script" src="web-archive/assets/web-archive.js"></script>
