--- a/index.html
+++ b/index.html
@@ -91,14 +91,13 @@
       </div>
 
       <div class="blockTitle dailyLife">
-        <h2 class="">Daily life ➔</h2>
+        <h2 class="">Daily life <span>➔</span></h2>
       </div>
 
       <div class="block dailyLife text">
-        <p>Studying my final year of the Double Master in UI/UX, between the <a
+        <li>Studying my final year of the Double Master in UI/UX, between the <a
             href="https://esad-amiens.design/fr/design-numerique/dnsep">ESAD</a> of Amiens andand the <a
-            href="https://www.utc.fr/en/courses-and-training/the-french-masters-degree/humanities-and-creative-industries-hic/specialty-design-and-experience-creation-dcx/">UTC</a>
-        </p>
+            href="https://www.utc.fr/en/courses-and-training/the-french-masters-degree/humanities-and-creative-industries-hic/specialty-design-and-experience-creation-dcx/">UTC</a></li>
       </div>
 
       <div class="block dailyLife text">
@@ -115,7 +114,7 @@
         <li>Making a website for the jewelry-maker, Angèle Carion.</li>
       </div>
       <div class="blockTitle connexions">
-        <h2 class="">Connexions ➔</h2>
+        <h2 class="">Connexions <span>➔</span></h2>
       </div>
       <div class="block connexions text">
         <ul>
