--- a/sunday-sites/index.html
+++ b/sunday-sites/index.html
@@ -23,6 +23,7 @@
           <li><a href="/sunday-sites/making-notes">making-notes</a></li>
           <li><a href="/sunday-sites/practice">practice</a></li>
           <li><a href="/sunday-sites/changing/">changing</a></li>
+          <li><a href="/sunday-sites/travels/">travels</a></li>
          </ul>
 </div>
 
