--- a/bg/index.html
+++ b/bg/index.html
@@ -32,7 +32,7 @@
 
     <div class="buttons">
     <button id="credits">Objets de Bulgarie:</button>
-    <button id="readme" class="hide"> <span class="vert">Предмети от България:</span> Ce site fait partie de l'exposition <span class="red">Un tour de Bulgarie maximum overdrive, manger rouler manger dormir peu feter beaucoup chauffer de l'eau manger de la neige et avoir plein d'énergie.</span> Comme un outil de préparation d'un voyage, de collection pendant le voyage ou souvenirs une fois arrivé·es, ce site-jeu veut nous rapeller le temps passé en Bulgarie et toutes les choses qu'on a pu faire en trop peu de temps. Merci Liliana pour cette ce temps encapsulé en 5 jours qui paru beaucoup +.         
+    <button id="readme" class="hide"> <span class="vert">Предмети от България:</span> Ce site fait partie de l'exposition <span class="red">Un tour de Bulgarie maximum overdrive, manger rouler manger dormir peu feter beaucoup chauffer de l'eau manger de la neige et avoir plein d'énergie.</span> Comme un outil de préparation d'un voyage, de collection pendant le voyage ou souvenirs une fois arrivé·es, ce site-jeu veut nous rapeller le temps passé en Bulgarie et toutes les choses qu'on a pu faire en trop peu de temps. Merci Liliana pour ce temps encapsulé en 5 jours qui paru beaucoup +.         
     <span class="vert">Imaginé et codé par <a href="https://pablo.energy" target="_blank">Pablo Moreno</a> en mars 2023.</span></button>
     
     <button onclick="create160()">160</button>
