--- a/sunday-sites/travels/index.html
+++ b/sunday-sites/travels/index.html
@@ -16,7 +16,7 @@
 
     <div class="content">
 
-        <a href="#top">☝︎</a>
+        <a href="#top" id="arriba">⇧</a>
 
         <div class="block">
             <h4>Mai 22</h4>
@@ -160,12 +160,18 @@
             <div class="cities">
                 <div class="city" id="Rotterdam"><span>Rotterdam</span></div>
                 <div class="city" id="Briançon"><span>Briançon</span></div>
+                <div class="city" id="Paris"><span>Paris</span></div>
             </div>
         </div>
 
 
     </div>
 
+    <div style="color: white;">
+        Made on a october's 22nd of 2023 <br>
+        with my friend <a href="https://samdroual.fr">Sam</a> at my house in Amiens<br>
+    <img src="assets/image.png" alt="" style="width: 200px;border-radius: 8px;">
+</div>
 
 </body>
 
