okk finit pour aujourd'hui

--- a/sunday-sites/travels/index.html
+++ b/sunday-sites/travels/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <h2>My travels from the last years</h2>
+    <h2>My travels from last times</h2>
 
     <div class="content">
 
@@ -164,13 +164,20 @@
             </div>
         </div>
 
+        <div class="block">
+            <h4>October 23</h4>
+            <div class="cities">
+                <div class="city" id="Amiens"><span>Amiens</span></div>
+            </div>
+        </div>
+
 
     </div>
 
     <div style="color: white;">
-        Made on a october's 22nd of 2023 <br>
-        with my friend <a href="https://samdroual.fr">Sam</a> at my house in Amiens<br>
-    <img src="assets/image.png" alt="" style="width: 200px;border-radius: 8px;">
+        Made on a October 22nd of 2023 <br>
+        with my friend <a href="https://samdroual.fr">Sam</a> in <div class="city" id="Amiens" style="width: fit-content; display: inline;"><span>Amiens</span></div><br>
+    <img src="assets/image.png" alt="" style="width: 200px;border-radius: 8px; margin-top: 10px;">
 </div>
 
 </body>
