--- a/sunday-sites/travels/index.html
+++ b/sunday-sites/travels/index.html
@@ -176,9 +176,12 @@
 
     <div style="color: white;">
         Made on a October 22nd of 2023 <br>
-        with my friend <a href="https://samdroual.fr">Sam</a> in <div class="city" id="Amiens" style="width: fit-content; display: inline;"><span>Amiens</span></div><br>
-    <img src="assets/image.png" alt="" style="width: 200px;border-radius: 8px; margin-top: 10px;">
-</div>
+        with my friend <a href="https://samdroual.fr">Sam</a> in <div class="city" id="Amiens"
+            style="width: fit-content; display: inline;"><span>Amiens</span></div><br>
+        <img src="assets/image.png" alt="" style="width: 200px;border-radius: 8px; margin-top: 10px;">
+    </div>
+
+    https://maps.app.goo.gl/yZWb52n7hY2DBa6SA
 
 </body>
 
